--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,6 +32,11 @@
     --color-red-300: 252, 165, 165;
   }
 }
+@layer components {
+  .textField__input {
+    @apply w-full py-3 px-4 rounded-xl bg-gray-100 text-secondary-900 border border-gray-100 outline-none duration-200 transition-all ease-in-out hover:border-primary-300 focus:outline-none focus:border-primary-300 focus:shadow-input-focus focus:bg-white;
+  }
+}
 
 html,
 body {
